--- a/game.html
+++ b/game.html
@@ -28,13 +28,13 @@
    <body>
    <h1>Mechanical Pencil Simulator</h1>
      <div id="panel">
-	<img id="icon1" class="icon" src="https://s4.aconvert.com/convert/p3r68-cdx67/cb91n-drcsw.png" alt="ad 1">
+	<img id="icon1" class="icon" src="https://www196.lunapic.com/do-not-link-here-use-hosting-instead/154047575753044060?8363417113.jpg" alt="ad 1">
 	 <script src=https://phosphorus.github.io/embed.js?id=28559798&auto-start=true&light-content=false hspace="100"></script>
-	<img id="icon3" class="icon" src="https://s4.aconvert.com/convert/p3r68-cdx67/cbzme-rptmo.png"alt="ad 2">
+	<img id="icon3" class="icon" src="https://www196.lunapic.com/do-not-link-here-use-hosting-instead/154047575753044060?809440887.jpg"alt="ad 2">
      </div>
      <h1>Tap the space bar to play</h1>
      <div>
-     <img src="https://s4.aconvert.com/convert/p3r68-cdx67/cbzkx-ehlbh.png"alt="ad 3">
+     <img src="https://www196.lunapic.com/do-not-link-here-use-hosting-instead/154047575753044060?3359589623.jpg"alt="ad 3">
      </div>
    </body>
 </html>
