--- a/game.html
+++ b/game.html
@@ -29,7 +29,7 @@
    <h1>Mechanical Pencil Simulator</h1>
      <div id="panel">
 	<img id="icon1" class="icon" src="https://www196.lunapic.com/do-not-link-here-use-hosting-instead/154047575753044060?8363417113.jpg" alt="ad 1">
-	 <script src=https://phosphorus.github.io/embed.js?id=28559798&auto-start=true&light-content=false hspace="100"></script>
+	 <script src="https://phosphorus.github.io/embed.js?id=28559798&auto-start=true&light-content=false"></script>
 	<img id="icon3" class="icon" src="https://www196.lunapic.com/do-not-link-here-use-hosting-instead/154047575753044060?809440887.jpg"alt="ad 2">
      </div>
      <h1>Tap the space bar to play</h1>
