--- a/game.html
+++ b/game.html
@@ -30,7 +30,7 @@
      <div id="panel">
 	<img id="icon1" class="icon" src="https://www196.lunapic.com/do-not-link-here-use-hosting-instead/154047575753044060?8363417113.jpg" alt="ad 1">
 	 <script src="https://phosphorus.github.io/embed.js?id=28559798&auto-start=true&light-content=false"></script>
-	<img id="icon3" class="icon" src="https://www196.lunapic.com/do-not-link-here-use-hosting-instead/154047575753044060?809440887.jpg"alt="ad 2">
+	<a data-flickr-embed="true"  href="https://www.flickr.com/photos/166047884@N07/44982086485/in/dateposted-public/" title="Hello"><img src="https://farm5.staticflickr.com/4803/44982086485_2deabea080_z.jpg" width="160" height="600" alt="Hello"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
      </div>
      <h1>Tap the space bar to play</h1>
      <div>
