--- a/game.html
+++ b/game.html
@@ -30,7 +30,7 @@
      <div id="panel">
 	<img id="icon1" class="icon" src="https://www196.lunapic.com/do-not-link-here-use-hosting-instead/154047575753044060?8363417113.jpg" alt="ad 1">
 	 <script src="https://phosphorus.github.io/embed.js?id=28559798&auto-start=true&light-content=false"></script>
-	<img src="https://farm5.staticflickr.com/4803/44982086485_2deabea080_z.jpg" id="icon2" class="icon" alt="ad 2"
+	<img id="icon2" class="icon" src="https://farm5.staticflickr.com/4803/44982086485_2deabea080_z.jpg" alt="ad 2">
      </div>
      <h1>Tap the space bar to play</h1>
      <div>
