--- a/game.html
+++ b/game.html
@@ -28,7 +28,7 @@
    <body>
    <h1>Mechanical Pencil Simulator</h1>
      <div id="panel">
-	<img id="icon1" class="icon" src="https://www196.lunapic.com/do-not-link-here-use-hosting-instead/154047575753044060?8363417113.jpg" alt="ad 1">
+	<img id="icon1" class="icon" src="https://farm5.staticflickr.com/4814/45846434722_d44c0781ec_z.jpg" alt="ad 1">
 	 <script src="https://phosphorus.github.io/embed.js?id=28559798&auto-start=true&light-content=false"></script>
 	<img id="icon2" class="icon" src="https://farm5.staticflickr.com/4803/44982086485_2deabea080_z.jpg" alt="ad 2">
      </div>
