--- a/game.html
+++ b/game.html
@@ -34,7 +34,7 @@
      </div>
      <h1>Tap the space bar to play</h1>
      <div>
-     <img src="https://www196.lunapic.com/do-not-link-here-use-hosting-instead/154047575753044060?3359589623.jpg"alt="ad 3">
+     <img src="https://farm5.staticflickr.com/4824/32025164198_2d087a05ca_z.jpg"alt="ad 3">
      </div>
    </body>
 </html>
