--- a/follow.html
+++ b/follow.html
@@ -3,7 +3,19 @@
 <head>
     <link rel="shortcut icon" type="image/png" href="https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/Simpleicons_Business_pencil-on-a-notes-paper.svg/2000px-Simpleicons_Business_pencil-on-a-notes-paper.svg.png"/>
 <style>
-body {
+
+   a:visited {
+    color: black;
+    background-color: transparent;
+    text-decoration: none;
+}
+a:hover {
+    color: blue;
+    background-color: transparent;
+    text-decoration: underline;
+}
+ 
+    body {
     background-color: #00bcd4;
     width: 100%;
   height: 2000px;
